--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,13 @@ header {
   margin-right: 20px;
 }
 
+.nav-lists ul li .reload-btn button {
+  background-color: #333;
+  color: #fff;
+  border-radius: 10px;
+  padding: 2px;
+}
+
 .nav-lists ul li:last-child {
   margin-right: 0;
 }
@@ -62,6 +69,16 @@ header {
   padding-top: 15px;
   font-size: 20px;
   font-weight: 400;
+}
+
+#main-container .private-info-container {
+  padding-top: 80px;
+  height: 65vh;
+}
+
+#main-container .private-info-container p {
+  font-size: 20px;
+  font-weight: bold;
 }
 
 footer {
