--- a/css/style.scss
+++ b/css/style.scss
@@ -22,6 +22,14 @@ header {
 
 .nav-lists ul li {
   margin-right: 20px;
+  .reload-btn {
+    button {
+      background-color: #333;
+      color: #fff;
+      border-radius: 10px;
+      padding: 2px;
+    }
+  }
 }
 
 .nav-lists ul li:last-child {
@@ -50,6 +58,17 @@ header {
   padding-top: 15px;
   font-size: 20px;
   font-weight: 400;
+}
+
+#main-container {
+  .private-info-container {
+    padding-top: 80px;
+    height: 65vh;
+    p {
+      font-size: 20px;
+      font-weight: bold;
+    }
+  }
 }
 
 footer {
